--- a/static/css/closet.css
+++ b/static/css/closet.css
@@ -1,6 +1,7 @@
 .below-header{
     position: fixed;
     margin-top: 70px;
+    background-color: #f6f4ebff
  }
  
  
@@ -9,8 +10,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f6f4ebff;
-    color: #333;
+    background-color: #f6f4ebff;;
  }
  
  
@@ -18,13 +18,11 @@
  .container {
     width: 100%;
     margin: 0 auto;
-    background-color: #f6f4ebff
  }
  
  
  .col-md-6{
     padding-left: 20px;
-    background-color: #f6f4ebff
  }
  
  
@@ -892,14 +890,14 @@
  html, body{
     margin: 0;
     padding: 0;
-    background-color: #f6f4ebff;
+    background-color: #f6f4ebff;;
  }
  
  
  .main{
     padding: none;
     font-family: Arial;
-    background-color: #f6f4ebff;
+    background-color: #f6f4ebff;;
  }
  
  
@@ -907,6 +905,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    background-color: #f6f4ebff;
  }
  
  
@@ -930,14 +929,14 @@
  
  
  .profile-section{
-   background-color: #f6f4ebff;
+    background-color: rgb(35, 35, 35);
     float: left;
     width: 100%;
  }
  
  
  .content-section{
-    background-color: #f6f4ebff;
+    background-color: rgb(35, 35, 35);
     float: left;
     width: 100%;
  }
@@ -980,7 +979,7 @@
     font-size: 30px;
     font-family: Rozha One, serif;
     font-weight: normal;
-    color: rgb(255, 255, 255);
+    color: rgb(0,0,0);
     padding-left: 20px;
  }
  
@@ -999,6 +998,7 @@
  .timeline{
     float: center;
     text-align: justify;
+    background-color: #f6f4ebff;
  }
  
  
@@ -1007,7 +1007,7 @@
     padding: 10px;
     padding-left: 30px;
     padding-top: 20px;
-    color: rgb(219, 217, 209);
+    color: rgb(0,0,0);
     font-family: Rozha One, serif;
     font-weight: normal;
  }
@@ -1038,13 +1038,13 @@
     background: #f9f9f9; /* Customize scrollbar track color */
  }
 
- .categories {
-    /* font-size: 30px;
+ .category {
+    font-size: 30px;
     padding: 10px;
     padding-left: 30px;
-    padding-top: 20px; */
+    padding-top: 20px;
     color: rgb(219, 217, 209);
-    /* font-family: Rozha One, serif;
-    font-weight: normal; */
+    font-family: Rozha One, serif;
+    font-weight: normal;
  }
  
