--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -29,6 +29,12 @@ html, body{
     font-size: 3.5rem; 
 }
 
+.header-dropdown {
+    position: relative;
+}
+
+
+
 .logo a{
     float: left;
     text-decoration: none;
@@ -72,10 +78,11 @@ a:hover{
     background-color: #f6f4ebff;
     float: left;
     width: 100%;
+    height: 100%;
 }
 
 .following-info{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(2, 88, 58);
     color: rgb(219, 217, 209);
     padding: 7px;
     padding-left: 15px;
@@ -92,7 +99,7 @@ a:hover{
     font-size: 15px;
     padding: 6px;
     font-weight: bold;
-    background-color: rgb(219, 217, 209);
+    background-color: #f6f4ebff;;
     border-radius: 5px;
     border: none;
 }
@@ -114,7 +121,7 @@ h3{
 .bio{
     /* Username's Bio */
     font-size: 18px;;
-    color: #3eac8bff;
+    color: rgb(2, 88, 58);
     font-weight: normal;
     font-family: arial;
     padding-top: 14px;
