--- a/templates/closet.html
+++ b/templates/closet.html
@@ -152,7 +152,7 @@
                                            </div>
           
                                            <!-- Uploading clothes -->
-                                           <form action="upload" method="POST" enctype="multipart/form-data">
+                                           <form action="{% url 'upload' %}" method="POST" enctype="multipart/form-data">
                                            {% csrf_token %}
                                            <p class=""> Upload Clothes
                                            </p>
