--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,9 +27,10 @@
 			<div class="col logo">
 				<a href="/">fabrik</a>
 			</div>
-			<div class="col topbar-contents">
-				<a href="logout">Log Out</a>
+			<div class="col topbar-contents">	
+				<a href="/logout">Log Out</a>
 				<a href="/">Home</a>
+				<a href="/closet/{{user.username}}">Closet</a>
 			</div>
         </div>
 
@@ -49,8 +50,8 @@
 								{% if user_object.username != user.username %}
 								<a data-ripple=""><button type="submit" class="settings-or-follow">{{button_text}}</button></a>
 								{% else %}
-								<a href="/settings" data-ripple=""><button type="submit" class="settings-or-follow" >Account Settings</button></a>
-								<!-- <a href="/settings" data-ripple="">Account Settings</a> -->
+								<!-- <a href="/settings" data-ripple=""><button type="submit" class="settings-or-follow" >Account Settings</button></a> -->
+								<a href="/settings" type="submit" class="settings-or-follow" style="color: black; text-decoration: none">Account Settings</a>
 								{% endif %}
 							</div>
 						</form>
