--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,6 +30,7 @@
 			<div class="col topbar-contents">
 				<a href="/logout">Log Out</a>
 				<a href="/">Home</a>
+				<a href="/closet/{{user.username}}">Closet</a>
 			</div>
         </div>
 
